<resources>
    <string name="app_name">PetPuja</string>

    <string-array name="gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_on_your_mind">What\'s on Your Mind?</string>
    <string name="restaurants_delivering_to_you">Restaurants Delivering To You</string>
    <string name="Trending_food_items">Trending Food Items</string>
    <string name="requestlocationpermission">requestLocationPermission</string>
    <string name="location">Location</string>
    <string name="get_location">Get Location</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="review">Review:  </string>
    <string name="drive_in_road_ahmedabad">Drive in Road, Ahmedabad</string>
    <string name="_4_5">4.5</string>
    <string name="hotel_moti_mahal">Hotel Moti Mahal</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="price">price</string>
    <string name="item_details">item details</string>
    <string name="item_name">item name</string>
    <string name="menu_image">Menu Image</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="_7898073810">7898073810</string>
    <string name="menu_name">Menu Name</string>
    <string name="_299">₹299</string>
    <string name="ordered_on_12_03_2024_15_30">Ordered on: 12/03/2024 15:30</string>
    <string name="hii">hii</string>
    <string name="_4">4</string>
    <string name="_100">100</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="your_wishlist_is_empty">Your WishList is Empty</string>
    <string name="click_for_nearby">Click For Nearby</string>
    <string name="veg">ON For Veg</string>
    <string name="_10_km_from_you_place">10 km from you place</string>
    <string name="non_veg">Non-Veg</string>
    <string name="order_place">Order Place</string>
    <string name="your_cart_is_empty">Your cart is Empty</string>
    <string name="rs_0">Rs. 0</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">phone</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="petpuja">PetPuja ,</string>
    <string name="kaam">Kaam</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="register_restaurant">Register Restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="select_restaurant_image_2">Select Restaurant Image 2</string>
    <string name="select_restaurant_image_1">Select Restaurant Image 1</string>
    <string name="select_closing_time">Select Closing Time</string>
    <string name="select_opening_time">Select Opening Time</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="restaurant_description">Restaurant Description</string>
    <string name="owner_name">Owner Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="your_order_have_been_taken">Your order is Confirmed</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="no_order_placed">No Order Placed</string>
    <string name="enter_email_or_phone_number">Enter Email or Phone Number</string>
    <string name="your_order_history">Your Order History</string>
    <string name="thanks_for_your_order">Thanks for Your order :)</string>
    <string name="login">LOGIN</string>
    <string name="distance">Distance</string>
    <string name="close_button">Close Button</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_registered_email_and_we_ll_send_you_a_new_password">Enter your registered email, and we’ll send you a new password.</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send">Send</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="hi">Hi,</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="where_every_meal_is_a_celebration_n_just_celebrate_it">Where Every Meal is a Celebration! \n Just Celebrate It</string>
    <string name="logout">logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="petpujaL">PetPuja</string>
    <string name="items_fetched">Items Fetched</string>
</resources>