<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterResturantActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_25sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/register_restaurant"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/restaurant_name"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/owner_name"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/restaurant_description"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/latitude"
                android:inputType="numberDecimal"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/restaurantLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/border_gender"
                android:hint="@string/longitude"
                android:inputType="numberDecimal"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/openTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/lightestOrange"
                android:text="@string/select_opening_time"
                android:textColor="@color/black"
                app:cornerRadius="0dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/closeTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/lightestOrange"
                android:text="@string/select_closing_time"
                android:textColor="@color/black"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imagePreview1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/imagePicker1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightestOrange"
                android:text="@string/select_restaurant_image_1"
                android:textColor="@color/black"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imagePreview2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop"
                android:visibility="gone" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/imagePicker2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightestOrange"
                android:text="@string/select_restaurant_image_2"
                android:textColor="@color/black"
                app:cornerRadius="0dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:cornerRadius="@dimen/_10sdp"
                android:text="@string/register_restaurant"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>