<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/menuImageView"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp">

        <TextView
            android:id="@+id/menuNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menuPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_299"
            android:textSize="@dimen/_14sp"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/orderDateTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordered_on_12_03_2024_15_30"
            android:textSize="@dimen/_14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="@dimen/_4sp" />


    </LinearLayout>
</LinearLayout>
