<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:background="@color/white"
    tools:context=".activities.RestaurantMenuActivity">
<!--
    <include
        layout="@layout/item_menu"
        android:visibility="gone" />-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRequestLocationPermission1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click_for_nearby" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/veg"
            android:textSize="@dimen/_10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_10_km_from_you_place" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleVegNonVeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="false"
            android:textOff="Non-Veg"
            android:textOn="Veg" />

    </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewForRestaurantMenuItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_menu" />

</LinearLayout>