<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightYellow"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:overScrollMode="always"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/noInternetImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/no_internet"
                android:visibility="gone"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:paddingTop="@dimen/_5sdp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewpager2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp" />
            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:shimmer_auto_start="true"
                app:shimmer_duration="1000">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@color/shimmer_bg"
                        android:layout_marginBottom="@dimen/_8sdp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@color/shimmer_bg"/>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <LinearLayout
                android:id="@+id/llMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_s_on_your_mind"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewForCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llResturant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurants_delivering_to_you"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restaurantRecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="@dimen/_5sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Trending_food_items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewForCategoriesScroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvRequestLocationPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/requestlocationpermission"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/showLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:textSize="@dimen/_24sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnGetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_location"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>